<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBgColor"
    tools:context=".presentation.fragments.RoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/room_type_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:theme="@style/LOSSectionHeaderStyle"
            android:text="@string/room_type_header"
            android:textColor="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/room_type_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/room_type_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_type_header" />

        <TextView
            android:id="@+id/room_type_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/room_type_options_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_type_name" />

        <TextView
            android:id="@+id/room_type_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/room_type_price_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_type_options" />

        <View
            android:id="@+id/comment_card_divider"
            style="@style/LOSListDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_type_price" />

        <TextView
            android:id="@+id/room_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LOSSectionHeaderStyle"
            android:padding="10dp"
            android:text="@string/room_info_header"
            android:textColor="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_card_divider" />

        <TextView
            android:id="@+id/room_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_address_placeholder"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_info_header" />

        <TextView
            android:id="@+id/room_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_description_placeholder"
            android:padding="10dp"
            android:textColor="?attr/secondaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_address" />

        <TextView
            android:id="@+id/room_floor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_floor_placeholder"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_description" />

        <TextView
            android:id="@+id/room_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_places_placeholder"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_floor" />

        <TextView
            android:id="@+id/room_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_isFree_placeholder"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_places" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/book_room_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/book_btn_alt"
            android:clickable="true"
            android:focusable="true"
            android:src="?attr/actionModePasteDrawable"
            android:backgroundTint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_room_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/delete_btn_alt"
            android:src="@android:drawable/ic_menu_delete"
            android:backgroundTint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_room_button"
            app:layout_constraintStart_toEndOf="@+id/book_room_button"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_room_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/edit_btn_alt"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_edit"
            android:backgroundTint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>