<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/room_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_type_placeholder"
            android:textColor="?attr/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/room_card_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_floor_placeholder"
            android:textColor="?attr/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/room_card_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_isFree_placeholder"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/comment_card_divider"
        style="@style/LOSListDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>